plugins {
    id 'java'
    id 'application'
    id 'com.github.johnrengelman.shadow' version '8.1.1'
}

group = 'com.riege.mc'
version = '1.21.4'

repositories {
    mavenCentral()
}

dependencies {
    implementation 'net.java.dev.jna:jna:5.14.0'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

application {
    mainClass = 'com.riege.rmc.Main'
}

sourceSets {
    main {
        java {
            srcDirs = ['src/main/java']
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.compilerArgs.addAll(['-Xlint:unchecked', '-Xlint:deprecation'])
}

tasks.named('run') {
    standardInput = System.in

    systemProperty 'java.library.path', file('natives').absolutePath

    jvmArgs '--enable-native-access=ALL-UNNAMED'
}

shadowJar {
    archiveBaseName.set('RiegeTerminal')
    archiveClassifier.set('')

    manifest {
        attributes(
                'Main-Class': 'com.riege.rmc.Main',
                'Implementation-Title': 'Riege MC Terminal',
                'Implementation-Version': project.version
        )
    }
}